# fusionagent

./: .gitignore  Dockerfile  README.md  benchmark.tp.toml  benchmark_comparison.py  benchmark_comparison.tp.toml  benchmark_e2e.py  benchmark_e2e_training.py  benchmark_e2e_training.tp.toml  benchmark_output.txt  benchmark_training.py  benchmark_training.tp.toml  job.tp.toml  pyproject.toml  researchspec.txt  results.md  smoke_test.py  smoke_test_retriever.py  training_benchmark_results.json
fusionagent/: __init__.py  midpoint-checkin.md  types.py
fusionagent/api/: __init__.py
fusionagent/generator/: __init__.py  codegen.py
fusionagent/graph/: __init__.py  analyzer.py
fusionagent/harness/: __init__.py  benchmark.py
fusionagent/packager/: __init__.py
fusionagent/research/: __init__.py  retriever.py
fusionagent/rl/: __init__.py
fusionagent/tests/: __init__.py  test_analyzer.py  test_benchmark.py  test_codegen.py  test_e2e_pipeline.py  test_retriever.py
