[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fusionagent"
version = "0.1.0"
requires-python = ">=3.10"
description = "RL-driven Triton kernel fusion agent"
dependencies = [
    "torch>=2.6.0",
    "triton>=3.2.0",
    "transformers>=4.40,<5",
    "fastapi>=0.115,<1",
    "openai>=1.30,<2",
    "httpx>=0.27,<1",
    "numpy>=1.26,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff"]

[tool.pytest.ini_options]
markers = ["gpu: requires CUDA GPU and Triton"]
testpaths = ["fusionagent/tests", "."]
